--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,19 +28,16 @@ jobs:
 
     - name: Build Docker image
       run: |
-        IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/eks-demo"
-        COMMIT_ID=$(git rev-parse --short HEAD)
-        docker build -t $IMAGE_NAME:$COMMIT_ID .
+        IMAGE_NAME="eks-demo" 
+        docker build -t $IMAGE_NAME .
         echo ::set-output name=IMAGE_NAME::$IMAGE_NAME
         echo ::set-output name=COMMIT_ID::$COMMIT_ID
 
     - name: Push Docker image to Docker Hub
       run: |
-        IMAGE_NAME=$INPUT_IMAGE_NAME
-        COMMIT_ID=$INPUT_COMMIT_ID
-        docker tag $IMAGE_NAME:$COMMIT_ID $IMAGE_NAME:latest
-        docker push $IMAGE_NAME:$COMMIT_ID
-        docker push $IMAGE_NAME:latest
-      env:
-        INPUT_IMAGE_NAME: ${{ steps.build.outputs.IMAGE_NAME }}
-        INPUT_COMMIT_ID: ${{ steps.build.outputs.COMMIT_ID }}
+        IMAGE_NAME="eks-demo" 
+        COMMIT_ID=$(git rev-parse --short HEAD)
+        IMAGE_NAME_FOR_TAG="${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME" 
+        docker tag $IMAGE_NAME $IMAGE_NAME_FOR_TAG:$COMMIT_ID
+        docker push $IMAGE_NAME_FOR_TAG:$COMMIT_ID
+    
