--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         IMAGE_NAME="eks-demo" 
         COMMIT_ID=$(git rev-parse --short HEAD)
         IMAGE_NAME_FOR_TAG="${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME"
-        DEPLOYMENT_FILE="deployment.yaml"
+        DEPLOYMENT_FILE="dev/deployment.yaml"
         yq eval ".spec.template.spec.containers[0].image = \"$IMAGE_NAME_FOR_TAG:$COMMIT_ID\"" -i "$DEPLOYMENT_FILE"
         echo "Image name updated to $NEW_IMAGE_NAME in $DEPLOYMENT_FILE"
 
