--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
         IMAGE_NAME_FOR_TAG="${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME"
         DEPLOYMENT_FILE="./eks-argocd/dev/deployment.yaml"
         yq eval ".spec.template.spec.containers[0].image = \"$IMAGE_NAME_FOR_TAG:$COMMIT_ID\"" -i "$DEPLOYMENT_FILE"
-        echo "Image name updated to "$IMAGE_NAME_FOR_TAG:$COMMIT_ID in $DEPLOYMENT_FILE"
+        echo "Image name updated to $IMAGE_NAME_FOR_TAG:$COMMIT_ID in $DEPLOYMENT_FILE"
         cat "$DEPLOYMENT_FILE"
 
 
