--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         repository: prashant-hariharan/eks-argocd
         ref: main
-        path: ../eks-argocd
+        path: /home/runner/work/eks-argocd
         
     - name: Print folder Structure
       run: ls -R
@@ -65,7 +65,7 @@ jobs:
         IMAGE_NAME="eks-demo" 
         COMMIT_ID=$(git rev-parse --short HEAD)
         IMAGE_NAME_FOR_TAG="${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME"
-        DEPLOYMENT_FILE="../eks-argocd/dev/deployment.yaml"
+        DEPLOYMENT_FILE="/home/runner/work/eks-argocd/dev/deployment.yaml"
         yq eval ".spec.template.spec.containers[0].image = \"$IMAGE_NAME_FOR_TAG:$COMMIT_ID\"" -i "$DEPLOYMENT_FILE"
         echo "Image name updated to $IMAGE_NAME_FOR_TAG:$COMMIT_ID in $DEPLOYMENT_FILE"
         cat "$DEPLOYMENT_FILE"
@@ -75,7 +75,7 @@ jobs:
       run: |
         git config --local user.email "${{ secrets.EMAIL }}"
         git config --local user.name "prashant-hariharan"
-        git add ../eks-argocd/dev/deployment.yaml
+        git add /home/runner/work/eks-argocd/dev/deployment.yaml
         git commit -m "Update image version to $(git rev-parse --short HEAD)"
         git push
     
