--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
       run: |
         IMAGE_NAME="eks-demo" 
         docker build -t $IMAGE_NAME .
-        echo ::set-output name=IMAGE_NAME::$IMAGE_NAME
-        echo ::set-output name=COMMIT_ID::$COMMIT_ID
+
 
 
     - name: Push Docker image to Docker Hub
@@ -47,7 +46,7 @@ jobs:
       with:
         repository: prashant-hariharan/eks-argocd
         ref: main
-        path: /home/runner/work/eks-argocd
+        path: eks-argocd
         
     - name: Print folder Structure
       run: ls -R
@@ -65,7 +64,7 @@ jobs:
         IMAGE_NAME="eks-demo" 
         COMMIT_ID=$(git rev-parse --short HEAD)
         IMAGE_NAME_FOR_TAG="${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME"
-        DEPLOYMENT_FILE="/home/runner/work/eks-argocd/dev/deployment.yaml"
+        DEPLOYMENT_FILE="./eks-argocd/dev/deployment.yaml"
         yq eval ".spec.template.spec.containers[0].image = \"$IMAGE_NAME_FOR_TAG:$COMMIT_ID\"" -i "$DEPLOYMENT_FILE"
         echo "Image name updated to $IMAGE_NAME_FOR_TAG:$COMMIT_ID in $DEPLOYMENT_FILE"
         cat "$DEPLOYMENT_FILE"
@@ -75,7 +74,8 @@ jobs:
       run: |
         git config --local user.email "${{ secrets.EMAIL }}"
         git config --local user.name "prashant-hariharan"
-        git add /home/runner/work/eks-argocd/dev/deployment.yaml
+        cd eks-argocd
+        git add ./dev/deployment.yaml
         git commit -m "Update image version to $(git rev-parse --short HEAD)"
         git push
     
