--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,9 @@ jobs:
       run: |
         git config --local user.email "${{ secrets.EMAIL }}"
         git config --local user.name "prashant-hariharan"
+
+        git config --global user.email "${{ secrets.EMAIL }}"
+        git config --global user.name "prashant-hariharan"
         cd eks-argocd
         COMMIT_ID=$(git rev-parse --short HEAD)
         git add ./dev/deployment.yaml
