--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,8 @@ jobs:
 
 
     - name: Commit and Push Changes
+      env:
+        GH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       run: |
         git config --local user.email "${{ secrets.EMAIL }}"
         git config --local user.name "prashant-hariharan"
